# toonic

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  TICKET  TODO.md  TOON-SPEC.md  ecommerce-api.toon  goal.yaml  project.sh  project.toon  pyproject.toml  toonic-server.yaml  unified_toon.py
2025/: README.md  TODO.md  TOON-SPEC.md
TODO/: 01-code2logic-status.md  02-toonic-vision.md  03-toon-format.md  04-logic2test-status.md  05-logic2code-status.md  06-benchmarks-results.md  07-refactoring-roadmap.md  08-toonic-multimodal-video.md  09-toonic-audio-vad.md  10-evidence-graph.md  11-videochat-logic.md  12-toonic-server-architecture.md  README.md  stage_0_foundation.py  stage_1_document_handlers.py  stage_2_data_config_handlers.py  stage_3_api_infra_handlers.py  stage_4_pipeline_cli.py  stage_5_video_handler.py  stage_6_audio_handler.py  stage_7_evidence_graph.py
docker/: Dockerfile  Dockerfile.autopilot  Dockerfile.minimal  Dockerfile.test  demo-autopilot.sh  docker-compose.autopilot.yml  docker-compose.test.yml  docker-compose.yml
docker/test-data/: sample.logfile
docs/: api.md  architecture-review.md  architecture.md  cctv-monitoring.md  cli.md  docker.md  history.md  plugins.md  query.md  server.md  triggers.md  web-ui.md
examples/: _helpers.py  run_all.py
examples/archive-monitoring/: README.md  run.py  run_cli.sh
examples/code-analysis/: README.md  run.py  run_cli.sh
examples/data-formats/: README.md  run.py  run_cli.sh
examples/db-archive-triage/: README.md  run.py
examples/directory-watching/: README.md  run.py  run_cli.sh
examples/http-monitoring/: README.md  run.py  run_cli.sh
examples/infra-monitoring/: README.md  example-triggers.yaml  run.py  run_cli.sh  toonic-server.yaml
examples/infra-triage/: README.md  run.py
examples/log-monitoring/: README.md  example-triggers.yaml  generate_logs.py  run.py  run_cli.sh
examples/multi-source/: README.md  example-triggers.yaml  run.py  run_cli.sh  toonic-server.yaml
examples/programmatic-api/: README.md  demo_accumulator.py  demo_pipeline.py  demo_quick.py  run_cli.sh
examples/protocol-recipes/: README.md  run.py
examples/realtime-api/: README.md  run.py
examples/security-audit/: CHANGELOG.md  ENTERPRISE_README.md  INSTALL_REQUIREMENTS.sh  MANUAL_INSTALL.md  QUICK_DEPLOYMENT.sh  README.md  README_COMPLETE.md  advanced_dashboard.html  continuous_monitoring.py  enterprise_config.yaml  enterprise_features.py  generate_report.py  monitoring_config.yaml  obywatel_actual_analysis.md  quick_audit.py  (+7 more)
examples/security-audit-code/: README.md  run.py  run_cli.sh
examples/security-audit-continuous/: README.md  run.py  run_cli.sh
examples/security-audit-fullstack/: README.md  run.py  run_cli.sh
examples/security-audit-web/: README.md  run.py  run_cli.sh
project/: README.md  analysis.toon  context.md  evolution.toon
tests/: conftest.py  test_autopilot.py  test_cli.py  test_core.py  test_evidence_graph.py  test_handlers.py  test_llm_pipeline.py  test_pipeline.py  test_quick.py  test_server.py  test_server_cli_sources.py  test_server_prompt_selection.py  test_triggers.py  test_watchers.py
toonic/: __init__.py  __main__.py  cli.py  pipeline.py
(+88 files in other folders)
